# DutyRoster

./: .gitignore  CMakeLists.txt
data/: dummyData.json
src/header/: department.h  doctor.h  employee.h  enterprise_constants.h  hod.h  leave_plan.h  print.h  roster.h
src/source/: department.cpp  employee.cpp  hod.cpp  leave_plan.cpp  main.cpp
